refactor: comprehensive architectural redesign (v2) (#446)