@@ -17,16 +17,13 @@
  */
 package de.eintosti.buildsystem.util.color;
 
-import com.google.common.collect.ImmutableMap;
 import de.eintosti.buildsystem.util.color.patterns.GradientPattern;
 import de.eintosti.buildsystem.util.color.patterns.HexPattern;
 import de.eintosti.buildsystem.util.color.patterns.RainbowPattern;
 import de.eintosti.buildsystem.util.color.patterns.SolidPattern;
-import java.awt.Color;
-import java.util.Arrays;
+import java.awt.*;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
 import net.md_5.bungee.api.ChatColor;
 import org.jetbrains.annotations.Unmodifiable;
 import org.jspecify.annotations.NullMarked;
@@ -34,36 +31,11 @@ import org.jspecify.annotations.NullMarked;
 @NullMarked
 public final class ColorAPI {
 
-    private static final Map<Color, ChatColor> COLORS = ImmutableMap.<Color, ChatColor>builder()
-            .put(new Color(0), ChatColor.getByChar('0'))
-            .put(new Color(170), ChatColor.getByChar('1'))
-            .put(new Color(43520), ChatColor.getByChar('2'))
-            .put(new Color(43690), ChatColor.getByChar('3'))
-            .put(new Color(11141120), ChatColor.getByChar('4'))
-            .put(new Color(11141290), ChatColor.getByChar('5'))
-            .put(new Color(16755200), ChatColor.getByChar('6'))
-            .put(new Color(11184810), ChatColor.getByChar('7'))
-            .put(new Color(5592405), ChatColor.getByChar('8'))
-            .put(new Color(5592575), ChatColor.getByChar('9'))
-            .put(new Color(5635925), ChatColor.getByChar('a'))
-            .put(new Color(5636095), ChatColor.getByChar('b'))
-            .put(new Color(16733525), ChatColor.getByChar('c'))
-            .put(new Color(16733695), ChatColor.getByChar('d'))
-            .put(new Color(16777045), ChatColor.getByChar('e'))
-            .put(new Color(16777215), ChatColor.getByChar('f'))
-            .build();
+    private static final List<String> SPECIAL_COLORS =
+            List.of("&l", "&n", "&o", "&k", "&m", "§l", "§n", "§o", "§k", "§m");
 
-    private static final java.util.List<String> SPECIAL_COLORS = Arrays.asList(
-            "&l", "&n", "&o", "&k", "&m",
-            "§l", "§n", "§o", "§k", "§m"
-    );
-
-    private static final java.util.List<ColorPattern> PATTERNS = Arrays.asList(
-            new GradientPattern(),
-            new HexPattern(),
-            new SolidPattern(),
-            new RainbowPattern()
-    );
+    private static final List<ColorPattern> PATTERNS =
+            List.of(new GradientPattern(), new HexPattern(), new SolidPattern(), new RainbowPattern());
 
     /**
      * Processes a string to add color to it. Thanks to Distressing for helping with the regex <3
@@ -93,18 +65,19 @@ public final class ColorAPI {
      * Colors a String with a gradiant.
      *
      * @param string The string we want to color
-     * @param start  The starting gradiant
-     * @param end    The ending gradiant
+     * @param start The starting gradiant
+     * @param end The ending gradiant
      */
     public static String color(String string, Color start, Color end) {
-        ChatColor[] colors = createGradient(start, end, withoutSpecialChar(string).length());
+        ChatColor[] colors =
+                createGradient(start, end, withoutSpecialChar(string).length());
         return apply(string, colors);
     }
 
     /**
      * Colors a String with rainbow colors.
      *
-     * @param string     The string which should have rainbow colors
+     * @param string The string which should have rainbow colors
      * @param saturation The saturation of the rainbow colors
      */
     public static String rainbow(String string, float saturation) {
@@ -125,24 +98,28 @@ public final class ColorAPI {
         StringBuilder specialColors = new StringBuilder();
         StringBuilder stringBuilder = new StringBuilder();
 
-        String[] characters = source.split("");
+        char[] characters = source.toCharArray();
         int outIndex = 0;
 
         for (int i = 0; i < characters.length; i++) {
-            if (characters[i].equals("&") || characters[i].equals("§")) {
+            char current = characters[i];
+            if (current == '&' || current == '§') {
                 if (i + 1 < characters.length) {
-                    if (characters[i + 1].equals("r")) {
+                    if (characters[i + 1] == 'r') {
                         specialColors.setLength(0);
                     } else {
-                        specialColors.append(characters[i]);
+                        specialColors.append(current);
                         specialColors.append(characters[i + 1]);
                     }
                     i++;
                 } else {
-                    stringBuilder.append(colors[outIndex++]).append(specialColors).append(characters[i]);
+                    stringBuilder
+                            .append(colors[outIndex++])
+                            .append(specialColors)
+                            .append(current);
                 }
             } else {
-                stringBuilder.append(colors[outIndex++]).append(specialColors).append(characters[i]);
+                stringBuilder.append(colors[outIndex++]).append(specialColors).append(current);
             }
         }
 
@@ -162,7 +139,7 @@ public final class ColorAPI {
     /**
      * Returns a rainbow array of chat colors.
      *
-     * @param step       How many colors we return
+     * @param step How many colors we return
      * @param saturation The saturation of the rainbow
      * @return The array of colors
      */
@@ -182,8 +159,8 @@ public final class ColorAPI {
      * Returns a gradient array of chat colors.
      *
      * @param start The starting color.
-     * @param end   The ending color.
-     * @param step  How many colors we return.
+     * @param end The ending color.
+     * @param step How many colors we return.
      * @author TheViperShow
      */
     private static ChatColor[] createGradient(Color start, Color end, int step) {
@@ -191,43 +168,20 @@ public final class ColorAPI {
         int stepR = Math.abs(start.getRed() - end.getRed()) / (step - 1);
         int stepG = Math.abs(start.getGreen() - end.getGreen()) / (step - 1);
         int stepB = Math.abs(start.getBlue() - end.getBlue()) / (step - 1);
-        int[] direction = new int[]{
-                start.getRed() < end.getRed() ? +1 : -1,
-                start.getGreen() < end.getGreen() ? +1 : -1,
-                start.getBlue() < end.getBlue() ? +1 : -1
+        int[] direction = new int[] {
+            start.getRed() < end.getRed() ? +1 : -1,
+            start.getGreen() < end.getGreen() ? +1 : -1,
+            start.getBlue() < end.getBlue() ? +1 : -1
         };
 
         for (int i = 0; i < step; i++) {
             Color color = new Color(
                     start.getRed() + ((stepR * i) * direction[0]),
                     start.getGreen() + ((stepG * i) * direction[1]),
-                    start.getBlue() + ((stepB * i) * direction[2])
-            );
+                    start.getBlue() + ((stepB * i) * direction[2]));
             colors[i] = ChatColor.of(color);
         }
 
         return colors;
-    }
-
-    /**
-     * Returns the closest legacy color from an RGB color
-     *
-     * @param color The color we want to transform
-     */
-    private static ChatColor getClosestColor(Color color) {
-        Color nearestColor = null;
-        double nearestDistance = Integer.MAX_VALUE;
-
-        for (Color constantColor : COLORS.keySet()) {
-            double distance = Math.pow(color.getRed() - constantColor.getRed(), 2)
-                    + Math.pow(color.getGreen() - constantColor.getGreen(), 2)
-                    + Math.pow(color.getBlue() - constantColor.getBlue(), 2);
-            if (nearestDistance > distance) {
-                nearestColor = constantColor;
-                nearestDistance = distance;
-            }
-        }
-
-        return COLORS.get(nearestColor);
     }
 }
